--- a/app/src/main/res/layout/media_item.xml
+++ b/app/src/main/res/layout/media_item.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
+              android:orientation="horizontal"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:padding="15dp">
+
+    <ImageView
+        android:layout_width="25dp"
+        android:layout_height="35dp"
+        android:id="@+id/item_type"
+        android:layout_gravity="left"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -12,6 +18,17 @@
         android:text="Large Text"
         android:fontFamily="sans-serif-light"
         android:id="@+id/title"
-        />
+        android:layout_gravity="left"
+        android:layout_weight="2"
+        android:paddingLeft="15dp"/>
+
+    <ToggleButton
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:id="@+id/star"
+        android:focusable="false"
+        android:background="@mipmap/star_off"
+        android:textOff=" "
+        android:textOn=" "/>
 
 </LinearLayout>
