--- a/app/src/main/res/layout/player_view.xml
+++ b/app/src/main/res/layout/player_view.xml
@@ -11,6 +11,11 @@
         android:layout_height="fill_parent"
         android:layout_gravity="center_vertical">
 
+        <ImageView
+            android:layout_width="80dp"
+            android:layout_height="match_parent"
+            android:id="@+id/art"/>
+
         <Button
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
