--- a/app/src/main/res/layout/media_imem_context_menu_item.xml
+++ b/app/src/main/res/layout/media_imem_context_menu_item.xml
@@ -2,11 +2,11 @@
 
     <TextView xmlns:android="http://schemas.android.com/apk/res/android"
               android:id="@android:id/text1"
-              android:paddingTop="15dip"
-              android:paddingBottom="15dip"
+              android:paddingTop="12dip"
+              android:paddingBottom="12dip"
               android:textAppearance="?android:attr/textAppearanceMedium"
               android:layout_width="fill_parent"
                 android:fontFamily="sans-serif-light"
               android:layout_height="wrap_content"
-              />
+              android:paddingLeft="12dp"/>
 
