--- a/app/src/main/res/layout/media_item.xml
+++ b/app/src/main/res/layout/media_item.xml
@@ -3,28 +3,30 @@
               android:orientation="horizontal"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:padding="15dp">
+              android:padding="12dp"
+    >
 
     <ImageView
         android:layout_width="25dp"
-        android:layout_height="35dp"
+        android:layout_height="30dp"
         android:id="@+id/item_type"
         android:layout_gravity="left"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Large Text"
         android:fontFamily="sans-serif-light"
         android:id="@+id/title"
         android:layout_gravity="left"
         android:layout_weight="2"
-        android:paddingLeft="15dp"/>
+        android:paddingLeft="15dp"
+        android:paddingTop="2dp"/>
 
     <ToggleButton
-        android:layout_width="35dp"
-        android:layout_height="35dp"
+        android:layout_width="50dp"
+        android:layout_height="30dp"
         android:id="@+id/star"
         android:focusable="false"
         android:background="@mipmap/star_off"
