--- a/app/src/main/res/values/theme.xml
+++ b/app/src/main/res/values/theme.xml
@@ -3,6 +3,9 @@
     <style name="CustomActionBarTheme"
            parent="@android:style/Theme.Holo.Light.DarkActionBar">
         <item name="android:actionBarStyle">@style/MyActionBar</item>
+            <item name="android:windowActionBar">false</item>
+            <item name="android:windowNoTitle">true</item>
+
         <item name="preferenceTheme">@style/PreferenceThemeOverlay</item>
     </style>
 
